kvtagger: create proof of concept
Signed-off-by: MÓZES Ádám István <adam.mozes@balabit.com>

--- a/modules/CMakeLists.txt
+++ b/modules/CMakeLists.txt
@@ -26,6 +26,7 @@ add_subdirectory(cryptofuncs)
 add_subdirectory(graphite)
 add_subdirectory(system-source)
 add_subdirectory(riemann)
+add_subdirectory(kvtagger)
 add_subdirectory(diskq)
 add_subdirectory(python)
 add_subdirectory(java)
