--- a/modules/csvparser/Makefile.am
+++ b/modules/csvparser/Makefile.am
@@ -2,8 +2,6 @@ module_LTLIBRARIES				+= modules/csvparser/libcsvparser.la
 modules_csvparser_libcsvparser_la_SOURCES	=	\
 	modules/csvparser/csvparser.c			\
 	modules/csvparser/csvparser.h			\
-	modules/csvparser/csv-scanner.c			\
-	modules/csvparser/csv-scanner.h			\
 	modules/csvparser/csvparser-grammar.y		\
 	modules/csvparser/csvparser-parser.c		\
 	modules/csvparser/csvparser-parser.h		\
@@ -12,7 +10,9 @@ modules_csvparser_libcsvparser_la_SOURCES	=	\
 modules_csvparser_libcsvparser_la_CPPFLAGS	=	\
 	$(AM_CPPFLAGS)					\
 	-I$(top_srcdir)/modules/csvparser		\
-	-I$(top_builddir)/modules/csvparser
+	-I$(top_builddir)/modules/csvparser		\
+	-I$(top_srcdir)/lib/scanner/csv-scanner	\
+	-I$(top_builddir)/lib/scanner/csv-scanner
 modules_csvparser_libcsvparser_la_LIBADD	=	\
 	$(MODULE_DEPS_LIBS)
 modules_csvparser_libcsvparser_la_LDFLAGS	=	\
