--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,8 @@ Build-Depends: debhelper (>= 9~),
 	       openjdk-7-jdk | openjdk-8-jdk,
 	       gradle (>=2.2.1),
 	       libcurl4-openssl-dev,
-	       libxml2-utils
+	       libxml2-utils,
+	       syslog-ng-java-compile-deps-mvn-repo
 Build-Conflicts: autoconf2.13
 Standards-Version: 3.9.6
 Homepage: http://www.syslog-ng.org/
