Revert "Merge pull request #1215 from kvch/move-deb-dir-to-release"
This reverts commit 7dc6bbc7563497367ed14e4050014a1e4bdb8949, reversing
changes made to 9e11f56aefd4c3d62ccd025a121f2adf8e304d11.

--- a/Makefile.am
+++ b/Makefile.am
@@ -167,6 +167,7 @@ include tests/Makefile.am
 include doc/Makefile.am
 include contrib/Makefile.am
 include scl/Makefile.am
+include debian/Makefile.am
 
 TEST_EXTENSIONS = .sh
 @VALGRIND_CHECK_RULES@
