--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -156,7 +156,8 @@ pkginclude_HEADERS			+= \
 	lib/ringbuffer.h		\
 	lib/ack_tracker.h		\
 	lib/host-id.h			\
-	lib/resolved-configurable-paths.h
+	lib/resolved-configurable-paths.h \
+	lib/stats-query-commands.h
 
 # this is intentionally formatted so conflicts are less likely to arise. one name in every line.
 lib_libsyslog_ng_la_SOURCES		= \
@@ -233,6 +234,7 @@ lib_libsyslog_ng_la_SOURCES		= \
 	$(transport_crypto_sources)	\
 	lib/host-id.c			\
 	lib/resolved-configurable-paths.c \
+	lib/stats-query-commands.c \
 					\
 	lib/cfg-lex.l			\
 	lib/cfg-grammar.y		\
