--- a/lib/stats/Makefile.am
+++ b/lib/stats/Makefile.am
@@ -7,7 +7,8 @@ statsinclude_HEADERS = \
 	lib/stats/stats-csv.h			\
 	lib/stats/stats-log.h			\
 	lib/stats/stats-registry.h		\
-	lib/stats/stats-syslog.h
+	lib/stats/stats-syslog.h		\
+	lib/stats/stats-query.h
 
 stats_sources = \
 	lib/stats/stats.c			\
@@ -16,6 +17,7 @@ stats_sources = \
 	lib/stats/stats-csv.c			\
 	lib/stats/stats-log.c			\
 	lib/stats/stats-registry.c		\
-	lib/stats/stats-syslog.c
+	lib/stats/stats-syslog.c		\
+	lib/stats/stats-query.c
 
 include lib/stats/tests/Makefile.am
