cli: add params parsing && setting up cfg
Signed-off-by: Noémi Ványi <sitbackandwait@gmail.com>

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -57,6 +57,7 @@ set (LIB_HEADERS
     cfg-parser.h
     cfg-tree.h
     children.h
+    cli.h
     crypto.h
     dnscache.h
     driver.h
@@ -143,6 +144,7 @@ set(LIB_SOURCES
     cfg-parser.c
     cfg-tree.c
     children.c
+    cli.c
     dnscache.c
     driver.c
     fdhelpers.c
