--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -90,6 +90,7 @@ pkginclude_HEADERS			+= \
 	lib/cfg-parser.h		\
 	lib/cfg-tree.h			\
 	lib/children.h			\
+	lib/cli.h				\
 	lib/crypto.h			\
 	lib/dnscache.h			\
 	lib/driver.h			\
@@ -172,6 +173,7 @@ lib_libsyslog_ng_la_SOURCES		= \
 	lib/cfg-parser.c		\
 	lib/cfg-tree.c			\
 	lib/children.c			\
+	lib/cli.c				\
 	lib/dnscache.c			\
 	lib/driver.c			\
 	lib/fdhelpers.c			\
