--- a/scl/Makefile.am
+++ b/scl/Makefile.am
@@ -13,7 +13,8 @@ SCL_SUBDIRS	= \
 	hdfs		\
 	apache		\
 	loggly		\
-	logmatic
+	logmatic	\
+	snmptrap
 SCL_CONFIGS	= scl.conf syslog-ng.conf
 
 EXTRA_DIST	+= $(addprefix scl/,$(SCL_CONFIGS) $(SCL_SUBDIRS))
