--- a/scl/osquery/plugin.conf
+++ b/scl/osquery/plugin.conf
@@ -1,5 +1,5 @@
 #############################################################################
-# Copyright (c) 2017 Peter Czanik <peter at czanik.hu>
+# Copyright (c) 2017 Balabit
 #
 # This program is free software; you can redistribute it and/or modify it
 # under the terms of the GNU General Public License version 2 as published
