Add quotes around the filename and the prefix, where that are substituted

--- a/scl/osquery/plugin.conf
+++ b/scl/osquery/plugin.conf
@@ -23,7 +23,7 @@
 
 block source osquery(file("/var/log/osquery/osqueryd.results.log") prefix(".osquery.")) {
   channel {
-    source { file(`file` program-override("osquery") flags(no-parse)); };
-    parser { json-parser (prefix(`prefix`)); };
+    source { file("`file`" program-override("osquery") flags(no-parse)); };
+    parser { json-parser (prefix("`prefix`")); };
   };
 };
