--- a/scl/snmptrap/snmptrapd-source.conf
+++ b/scl/snmptrap/snmptrapd-source.conf
@@ -32,6 +32,7 @@ block source snmptrap(
           multi-line-mode("prefix-garbage")
           # prefix: <date><separator><time>
           multi-line-prefix('^[0-9]{4}-[0-9]{1,2}-[0-9]{1,2}[ T]([0-9]{1,2}:){2}[0-9]{2}')
+          `__VARARGS__`
           flags(no-parse)
       );
     };
