fixup! scl: add snmptrap() source block

--- a/scl/snmptrap/snmptrapd-source.conf
+++ b/scl/snmptrap/snmptrapd-source.conf
@@ -36,6 +36,6 @@ block source snmptrap(
           flags(no-parse)
       );
     };
-    parser { snmptrapd-parser( prefix(`prefix`) generate-message(`generate-message`) ); };
+    parser { snmptrapd-parser( prefix("`prefix`") generate-message(`generate-message`) ); };
   };
 };
