snmptrapd-parser: rename generate-message() to set-message-macro()
Signed-off-by: László Várady <laszlo.varady@balabit.com>

--- a/scl/snmptrap/snmptrapd-source.conf
+++ b/scl/snmptrap/snmptrapd-source.conf
@@ -23,7 +23,7 @@
 block source snmptrap(
   filename("")
   prefix(".snmp.")
-  generate-message(yes)
+  set-message-macro(yes)
 )
 {
   channel {
@@ -36,6 +36,6 @@ block source snmptrap(
           flags(no-parse)
       );
     };
-    parser { snmptrapd-parser( prefix("`prefix`") generate-message(`generate-message`) ); };
+    parser { snmptrapd-parser( prefix("`prefix`") set-message-macro(`set-message-macro`) ); };
   };
 };
