debian: syslog-ng-mod-curl is renamed to mod-http
Following the upstream change, mod-curl is renamed to mod-http and the
java based implementation is renamed to mod-java-http

Signed-off-by: Balazs Scheidler <balazs.scheidler@balabit.com>

--- a/debian/control
+++ b/debian/control
@@ -558,7 +558,7 @@ Description: Enhanced system logging daemon (Kafka destination)
  This package provides the Apache Kafka destination, allowing one to send
  messages to Kafka.
 
-Package: syslog-ng-mod-http
+Package: syslog-ng-mod-java-http
 Architecture: any
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}, syslog-ng-mod-java-common-lib, syslog-ng-mod-java
@@ -581,7 +581,7 @@ Description: Enhanced system logging daemon (HTTP destination)
  This package provides an HTTP destination, allowing one to send syslog messages as HTTP 
  PUT messages to an http server.
 
-Package: syslog-ng-mod-curl
+Package: syslog-ng-mod-http
 Architecture: any
 Multi-Arch: foreign
 Depends: ${shlibs:Depends}, ${misc:Depends}
