--- a/Makefile.am
+++ b/Makefile.am
@@ -31,7 +31,6 @@ AM_TESTS_ENVIRONMENT	= top_srcdir="$(top_srcdir)"
 ACLOCAL_AMFLAGS		= -I m4 --install
 
 EXTRA_DIST		= ${BUILT_SOURCES} VERSION NEWS.md autogen.sh \
-			  syslog-ng.spec syslog-ng.spec.in \
 			  dist.conf dist.conf.in syslog-ng.pc.in \
 			  syslog-ng-add-contextual-data.pc.in \
 			  CONTRIBUTING.md
@@ -168,6 +167,7 @@ include doc/Makefile.am
 include contrib/Makefile.am
 include scl/Makefile.am
 include debian/Makefile.am
+include rpm/Makefile.am
 
 TEST_EXTENSIONS = .sh
 @VALGRIND_CHECK_RULES@
