--- a/syslog-ng-config.h.in
+++ b/syslog-ng-config.h.in
@@ -19,6 +19,7 @@
 
 #cmakedefine SYSLOG_NG_SOURCE_REVISION "@SYSLOG_NG_SOURCE_REVISION@"
 #cmakedefine SYSLOG_NG_VERSION "@SYSLOG_NG_VERSION@"
+#cmakedefine01 SYSLOG_NG_ENABLE_SERVER_MODE
 #cmakedefine01 SYSLOG_NG_ENABLE_DEBUG
 #cmakedefine01 SYSLOG_NG_ENABLE_GPROF
 #cmakedefine01 SYSLOG_NG_ENABLE_IPV6
@@ -37,3 +38,4 @@
 #cmakedefine SYSLOG_NG_ENABLE_IPV6 @SYSLOG_NG_ENABLE_IPV6@
 #cmakedefine SYSLOG_NG_JAVA_MODULE_PATH "@SYSLOG_NG_JAVA_MODULE_PATH@"
 #cmakedefine SYSLOG_NG_ENABLE_DEBUG @SYSLOG_NG_ENABLE_DEBUG@
+#cmakedefine SYSLOG_NG_ENABLE_SERVER_MODE @SYSLOG_NG_ENABLE_SERVER_MODE@
