--- a/lib/transport/tests/Makefile.am
+++ b/lib/transport/tests/Makefile.am
@@ -1,5 +1,6 @@
 lib_transport_tests_TESTS		 = \
-	lib/transport/tests/test_aux_data
+	lib/transport/tests/test_aux_data \
+	lib/transport/tests/test_multitransport_factory
 
 check_PROGRAMS				+= ${lib_transport_tests_TESTS}
 
@@ -8,3 +9,9 @@ lib_transport_tests_test_aux_data_CFLAGS  = $(TEST_CFLAGS) \
 lib_transport_tests_test_aux_data_LDADD	 = $(TEST_LDADD)
 lib_transport_tests_test_aux_data_SOURCES = 			\
 	lib/transport/tests/test_aux_data.c
+
+lib_transport_tests_test_multitransport_factory_CFLAGS  = $(TEST_CFLAGS) \
+	-I${top_srcdir}/lib/transport/tests
+lib_transport_tests_test_multitransport_factory_LDADD	 = $(TEST_LDADD)
+lib_transport_tests_test_multitransport_factory_SOURCES = 			\
+	lib/transport/tests/test_multitransport_factory.c
